force-app/main/default/objects/PS_Base_Price__c/PS_Base_Price__c.object-meta.xml
<CustomObject>
    <label>PS_Base_Price</label>
    <nameField>
        <label>PS_Base_Price</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS_Base_Price</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>