force-app/main/default/objects/PS_Base_Price__c/fields/Field_14__c.field-meta.xml
<CustomField>
    <fullName>Field_14__c</fullName>
    <label>Field 14</label>
    <length>255</length>
    <type>Text</type>
</CustomField>