force-app/main/default/objects/PS_Base_Price__c/fields/Field_16__c.field-meta.xml
<CustomField>
    <fullName>Field_16__c</fullName>
    <label>Field 16</label>
    <length>255</length>
    <type>Text</type>
</CustomField>