force-app/main/default/objects/PS_Base_Price__c/fields/KEY__c.field-meta.xml
<CustomField>
    <fullName>KEY__c</fullName>
    <label>KEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>