force-app/main/default/objects/PS_Base_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BodyMatlCode__c</columns>
    <columns>ElementMatlCode__c</columns>
    <columns>ElementSizeCode__c</columns>
    <columns>Model__c</columns>
    <columns>Module__c</columns>
    <columns>Price__c</columns>
    <columns>SeatMatlCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>